--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
+    <title>2024</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" type="text/css" media="screen" href="styles.css" />
+    <!-- <script src="main.js"></script> -->
+  </head>
+  <body>
+    <header>
+      <h1 class="main-header">2048</h1>
+    </header>
+
+    <div class="game-area">
+      <div id="score"></div>
+
+      <div id="game"></div>
+    </div>
+  </body>
 </html>
