added <p> to tiles and better css

--- a/index.html
+++ b/index.html
@@ -20,19 +20,75 @@
 
       <div class="game-area">
         <div id="score-display">
-          <p>Your score:<span id="score">0</span></p>
+          <p>Your score: <span id="score">0</span></p>
         </div>
 
-        <div id="game"></div>
-      </div>
+        <div id="game">
+          <div class="game-row">
+            <div class="tile">
+              <p class="value">2</p>
+            </div>
+            <div class="tile">
+              <p class="value">2</p>
+            </div>
+            <div class="tile">
+              <p class="value">2</p>
+            </div>
+            <div class="tile">
+              <p class="value">2</p>
+            </div>
+          </div>
+          <div class="game-row">
+            <div class="tile">
+              <p class="value">2</p>
+            </div>
+            <div class="tile">
+              <p class="value">4</p>
+            </div>
+            <div class="tile">
+              <p class="value">256</p>
+            </div>
+            <div class="tile">
+              <p class="value"></p>
+            </div>
+          </div>
+          <div class="game-row">
+            <div class="tile">
+              <p class="value"></p>
+            </div>
+            <div class="tile">
+              <p class="value"></p>
+            </div>
+            <div class="tile">
+              <p class="value"></p>
+            </div>
+            <div class="tile">
+              <p class="value">61589</p>
+            </div>
+          </div>
+          <div class="game-row">
+            <div class="tile">
+              <p class="value">2048</p>
+            </div>
+            <div class="tile">
+              <p class="value"></p>
+            </div>
+            <div class="tile">
+              <p class="value">16</p>
+            </div>
+            <div class="tile">
+              <p class="value"></p>
+            </div>
+          </div>
+        </div>
 
-      <div class="how-to-play">
-        <p>
-        <span class="miniheader">How to play:</span>
-        Use <span class="emph">arrow keys</span> to move the tiles.
-        When two tiles with the same number touch they merge into one!
-        </p>
+        <div class="how-to-play">
+          <p>
+          <span class="miniheader">How to play:</span>
+          Use <span class="emph">arrow keys</span> to move the tiles.
+          When two tiles with the same number touch they merge into one!
+          </p>
+        </div>
       </div>
-    </div>
   </body>
 </html>
