--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>2024</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="styles.css" />
-    <!-- <script src="main.js"></script> -->
+    <script src="Tile.js"></script>
+    <script src="Grid.js"></script>
   </head>
   <body>
     <header>
