--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>2024</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="styles.css" />
-    <script src="Tile.js"></script>
-    <script src="Grid.js"></script>
+    <script src="tile.js"></script>
+    <script src="grid.js"></script>
+    <script src="input-manager.js"></script>
+    <script src="game-manager.js"></script>
   </head>
   <body>
     <header>
@@ -24,7 +26,7 @@
           <p>Your score: <span id="score">0</span></p>
         </div>
 
-        <div id="game">
+        <div class="tile-area">
           <div class="game-row">
             <div class="tile">
               <p class="value">2</p>
