--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="tile.js"></script>
     <script src="grid.js"></script>
     <script src="input-manager.js"></script>
+    <script src="renderer.js"></script>
     <script src="game-manager.js"></script>
   </head>
   <body>
