include <script>app</script>

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="input-manager.js"></script>
     <script src="renderer.js"></script>
     <script src="game-manager.js"></script>
+    <script src="app.js"></script>
   </head>
   <body>
     <header>
