--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,7 @@
     <title>2024</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="styles.css" />
-    <script src="tile.js"></script>
-    <script src="grid.js"></script>
-    <script src="input-manager.js"></script>
-    <script src="renderer.js"></script>
-    <script src="game-manager.js"></script>
-    <script src="app.js"></script>
+    <script src="bundle.js"></script>
   </head>
   <body>
     <header>
