--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,94 @@
-<!DOCTYPE html><html> <head> <meta charset="utf-8"> <meta http-equiv="X-UA-Compatible" content="IE=edge"> <title>2024</title> <meta name="viewport" content="width=device-width, initial-scale=1"> <link rel="stylesheet" type="text/css" media="screen" href="/styles.60cd0ad2.css"> <script src="/app.b7a190aa.js"></script> </head> <body> <header> <h1 class="main-header">2048</h1> </header> <div class="content"> <div class="info"> <p>Join the tiles to get to the 2048 tile!</p> </div> <div class="game-area"> <div id="score-display"> <p>Your score: <span id="score">0</span></p> </div> <div class="tile-area"> <div class="game-row"> <div class="tile"> <p class="value">2</p> </div> <div class="tile"> <p class="value">2</p> </div> <div class="tile"> <p class="value">2</p> </div> <div class="tile"> <p class="value">2</p> </div> </div> <div class="game-row"> <div class="tile"> <p class="value">2</p> </div> <div class="tile"> <p class="value">4</p> </div> <div class="tile"> <p class="value">256</p> </div> <div class="tile"> <p class="value"></p> </div> </div> <div class="game-row"> <div class="tile"> <p class="value"></p> </div> <div class="tile"> <p class="value"></p> </div> <div class="tile"> <p class="value"></p> </div> <div class="tile"> <p class="value">61589</p> </div> </div> <div class="game-row"> <div class="tile"> <p class="value">2048</p> </div> <div class="tile"> <p class="value"></p> </div> <div class="tile"> <p class="value">16</p> </div> <div class="tile"> <p class="value"></p> </div> </div> </div> <div class="how-to-play"> <p> <span class="miniheader">How to play:</span> Use <span class="emph">arrow keys</span> to move the tiles. When two tiles with the same number touch they merge into one! </p> </div> </div> </div></body> </html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>2024</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="/styles.8986bff4.css">
+    <script src="/app.c3f9f951.js"></script>
+  <script src="/styles.8986bff4.js"></script></head>
+  <body>
+    <header>
+      <h1 class="main-header">2048</h1>
+    </header>
+
+    <div class="content">
+      <div class="info">
+        <p>Join the tiles to get to the 2048 tile!</p>
+      </div>
+
+      <div class="game-area">
+        <div id="score-display">
+          <p>Your score: <span id="score">0</span></p>
+        </div>
+
+        <div class="tile-area">
+          <div class="game-row">
+            <div class="tile">
+              <p class="value">2</p>
+            </div>
+            <div class="tile">
+              <p class="value">2</p>
+            </div>
+            <div class="tile">
+              <p class="value">2</p>
+            </div>
+            <div class="tile">
+              <p class="value">2</p>
+            </div>
+          </div>
+          <div class="game-row">
+            <div class="tile">
+              <p class="value">2</p>
+            </div>
+            <div class="tile">
+              <p class="value">4</p>
+            </div>
+            <div class="tile">
+              <p class="value">256</p>
+            </div>
+            <div class="tile">
+              <p class="value"></p>
+            </div>
+          </div>
+          <div class="game-row">
+            <div class="tile">
+              <p class="value"></p>
+            </div>
+            <div class="tile">
+              <p class="value"></p>
+            </div>
+            <div class="tile">
+              <p class="value"></p>
+            </div>
+            <div class="tile">
+              <p class="value">61589</p>
+            </div>
+          </div>
+          <div class="game-row">
+            <div class="tile">
+              <p class="value">2048</p>
+            </div>
+            <div class="tile">
+              <p class="value"></p>
+            </div>
+            <div class="tile">
+              <p class="value">16</p>
+            </div>
+            <div class="tile">
+              <p class="value"></p>
+            </div>
+          </div>
+        </div>
+
+        <div class="how-to-play">
+          <p>
+          <span class="miniheader">How to play:</span>
+          Use <span class="emph">arrow keys</span> to move the tiles.
+          When two tiles with the same number touch they merge into one!
+          </p>
+        </div>
+      </div>
+  </div></body>
+</html>
