move script to bottom

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,6 @@
     <title>2024</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="/styles.8986bff4.css">
-    <script src="/app.c3f9f951.js"></script>
   <script src="/styles.8986bff4.js"></script></head>
   <body>
     <header>
@@ -24,64 +23,65 @@
         </div>
 
         <div class="tile-area">
-            <div class="tile">
-              <p class="value">2</p>
-            </div>
-            <div class="tile">
-              <p class="value">2</p>
-            </div>
-            <div class="tile">
-              <p class="value">2</p>
-            </div>
-            <div class="tile">
-              <p class="value">2</p>
-            </div>
-            <div class="tile">
-              <p class="value">2</p>
-            </div>
-            <div class="tile">
-              <p class="value">4</p>
-            </div>
-            <div class="tile">
-              <p class="value">256</p>
-            </div>
-            <div class="tile">
-              <p class="value"></p>
-            </div>
-            <div class="tile">
-              <p class="value"></p>
-            </div>
-            <div class="tile">
-              <p class="value"></p>
-            </div>
-            <div class="tile">
-              <p class="value"></p>
-            </div>
-            <div class="tile">
-              <p class="value">61589</p>
-            </div>
-            <div class="tile">
-              <p class="value">2048</p>
-            </div>
-            <div class="tile">
-              <p class="value"></p>
-            </div>
-            <div class="tile">
-              <p class="value">16</p>
-            </div>
-            <div class="tile">
-              <p class="value"></p>
-            </div>
-          </div>
+          <!-- <div class="tile"> -->
+          <!--   <p class="value">2</p> -->
+          <!-- </div> -->
+          <!-- <div class="tile"> -->
+          <!--   <p class="value">2</p> -->
+          <!-- </div> -->
+          <!-- <div class="tile"> -->
+          <!--   <p class="value">2</p> -->
+          <!-- </div> -->
+          <!-- <div class="tile"> -->
+          <!--   <p class="value">2</p> -->
+          <!-- </div> -->
+          <!-- <div class="tile"> -->
+          <!--   <p class="value">2</p> -->
+          <!-- </div> -->
+          <!-- <div class="tile"> -->
+          <!--   <p class="value">4</p> -->
+          <!-- </div> -->
+          <!-- <div class="tile"> -->
+          <!--   <p class="value">256</p> -->
+          <!-- </div> -->
+          <!-- <div class="tile"> -->
+          <!--   <p class="value"></p> -->
+          <!-- </div> -->
+          <!-- <div class="tile"> -->
+          <!--   <p class="value"></p> -->
+          <!-- </div> -->
+          <!-- <div class="tile"> -->
+          <!--   <p class="value"></p> -->
+          <!-- </div> -->
+          <!-- <div class="tile"> -->
+          <!--   <p class="value"></p> -->
+          <!-- </div> -->
+          <!-- <div class="tile"> -->
+          <!--   <p class="value">61589</p> -->
+          <!-- </div> -->
+          <!-- <div class="tile"> -->
+          <!--   <p class="value">2048</p> -->
+          <!-- </div> -->
+          <!-- <div class="tile"> -->
+          <!--   <p class="value"></p> -->
+          <!-- </div> -->
+          <!-- <div class="tile"> -->
+          <!--   <p class="value">16</p> -->
+          <!-- </div> -->
+          <!-- <div class="tile"> -->
+          <!--   <p class="value"></p> -->
+          <!-- </div> -->
         </div>
+      </div>
 
-        <div class="how-to-play">
-          <p>
+      <div class="how-to-play">
+        <p>
           <span class="miniheader">How to play:</span>
           Use <span class="emph">arrow keys</span> to move the tiles.
           When two tiles with the same number touch they merge into one!
-          </p>
-        </div>
+        </p>
       </div>
+    </div>
+    <script src="/app.c3f9f951.js"></script>
   </body>
 </html>
