--- a/src/index.html
+++ b/src/index.html
@@ -23,54 +23,27 @@
         </div>
 
         <div class="tile-area">
-          <!-- <div class="tile"> -->
-          <!--   <p class="value">2</p> -->
-          <!-- </div> -->
-          <!-- <div class="tile"> -->
-          <!--   <p class="value">2</p> -->
-          <!-- </div> -->
-          <!-- <div class="tile"> -->
-          <!--   <p class="value">2</p> -->
-          <!-- </div> -->
-          <!-- <div class="tile"> -->
-          <!--   <p class="value">2</p> -->
-          <!-- </div> -->
-          <!-- <div class="tile"> -->
-          <!--   <p class="value">2</p> -->
-          <!-- </div> -->
-          <!-- <div class="tile"> -->
-          <!--   <p class="value">4</p> -->
-          <!-- </div> -->
-          <!-- <div class="tile"> -->
-          <!--   <p class="value">256</p> -->
-          <!-- </div> -->
-          <!-- <div class="tile"> -->
-          <!--   <p class="value"></p> -->
-          <!-- </div> -->
-          <!-- <div class="tile"> -->
-          <!--   <p class="value"></p> -->
-          <!-- </div> -->
-          <!-- <div class="tile"> -->
-          <!--   <p class="value"></p> -->
-          <!-- </div> -->
-          <!-- <div class="tile"> -->
-          <!--   <p class="value"></p> -->
-          <!-- </div> -->
-          <!-- <div class="tile"> -->
-          <!--   <p class="value">61589</p> -->
-          <!-- </div> -->
-          <!-- <div class="tile"> -->
-          <!--   <p class="value">2048</p> -->
-          <!-- </div> -->
-          <!-- <div class="tile"> -->
-          <!--   <p class="value"></p> -->
-          <!-- </div> -->
-          <!-- <div class="tile"> -->
-          <!--   <p class="value">16</p> -->
-          <!-- </div> -->
-          <!-- <div class="tile"> -->
-          <!--   <p class="value"></p> -->
-          <!-- </div> -->
+          <div class="ghost-container">
+            <div class="ghost-tile"></div>
+            <div class="ghost-tile"></div>
+            <div class="ghost-tile"></div>
+            <div class="ghost-tile"></div>
+
+            <div class="ghost-tile"></div>
+            <div class="ghost-tile"></div>
+            <div class="ghost-tile"></div>
+            <div class="ghost-tile"></div>
+
+            <div class="ghost-tile"></div>
+            <div class="ghost-tile"></div>
+            <div class="ghost-tile"></div>
+            <div class="ghost-tile"></div>
+
+            <div class="ghost-tile"></div>
+            <div class="ghost-tile"></div>
+            <div class="ghost-tile"></div>
+            <div class="ghost-tile"></div>
+          </div>
         </div>
       </div>
 
