html and styling

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,8 @@
 
       <div class="game-area">
         <div id="score-display">
-          <p>Your score: <span id="score">0</span></p>
+          <p id="score-text">Score <span id="score">0</span></p>
+          <button id="restart-button">New game</button>
         </div>
 
         <div class="tile-area">
